// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should detect when an element is not sticking 1`] = `
<div
  data-testid="root"
  style="height: 1000px;"
>
  <div
    data-testid="target"
    style="position: sticky; top: 0px;"
  >
    not sticky
  </div>
</div>
`;

exports[`it should detect when an element is sticking 1`] = `
<div
  data-testid="root"
  style="height: 1000px;"
>
  <div
    data-testid="target"
    style="position: sticky; top: 10px;"
  >
    sticky
  </div>
</div>
`;
